<resources>
    <string name="app_name">Game Suit - Challenge Chapter 4</string>
    <string name="txt_player_1">Player 1</string>
    <string name="txt_computer">Computer</string>
    <string name="log_player1_batu">initView : Player 1 Memilih Batu</string>
    <string name="log_player1_gunting">initView : Player 1 Memilih Gunting</string>
    <string name="log_player1_kertas">initView : Player 1 Memilih Kertas</string>
    <string name="text_splash_screen_url">https://i.ibb.co/HC5ZPgD/splash-screen 1.png</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_computer">Computer</string>
    <string name="text_next">Next</string>
    <string name="text_previous">Previous</string>
    <string name="text_select_your_opponent">SELECT YOUR OPPONENT</string>
    <string name="text_pvp">PVP</string>
    <string name="text_pve">PVE</string>
    <string name="text_button_lets_play">Let\'s PLAY</string>
    <string name="text_welcome_to">WELCOME TO</string>
    <string name="text_player_vs_player">PLAYER VS PLAYER</string>
    <string name="text_player_vs_computer">PLAYER VS COMPUTER</string>
    <string name="text_please_input_your_name">PLEASE INPUT YOUR NAME</string>
    <string name="text_button_submit">Submit</string>
    <string name="text_dialog_game_result">GAME RESULT</string>
    <string name="text_dialog_player_name">PLAYER NAME</string>
    <string name="text_dialog_result">Result</string>
    <string name="text_dialog_computer_choose">Computer Choose :</string>
    <string name="text_dialog_player_choose">Player Choose :</string>
    <string name="text_dialog_button_play_again">PLAY AGAIN</string>
    <string name="text_dialog_button_back_to_menu">Back To Menu</string>
    <string name="text_loading">LOADING . . .</string>
    <string name="text_username">username</string>
    <string name="text_player_select_paper">Player Select Paper</string>
    <string name="text_player_select_scissor">Player Select Scissor</string>
    <string name="text_reset_game">Reset Game, Enjoy !</string>
    <string name="text_exit">Exit To Main Menu!</string>
    <string name="text_computer_select_rock">Computer Select Rock</string>
    <string name="text_computer_select_paper">Computer Select Paper</string>
    <string name="text_computer_select_scissor">Computer Select Scissor</string>
    <string name="text_lose">LOSE !</string>
    <string name="text_draw">DRAW !</string>
    <string name="text_win">WIN !</string>
    <string name="text_player2_turn">\" Player 2 Turn\"</string>
    <string name="text_click_start_battle">Click Start Battle</string>
    <string name="text_please_enter_your_name">Please Enter Your Name</string>
    <string name="text_please_choose_playing_mode">Please Choose Playing Mode</string>
    <string name="text_player1_pick_first">Player 1 Pick First</string>
</resources>