<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.MenuActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_game_landing1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_action_button"
        android:fontFamily="@font/font_road_rage"
        android:text="@string/text_select_your_opponent"
        android:textColor="@color/loading_1"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <LinearLayout
        android:id="@+id/ll_menu_pvp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_action_button"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_125sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_pvp" />

        <TextView
            android:id="@+id/tv_menu_pvp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/font_road_rage"
            android:text="@string/text_pvp"
            android:textColor="@color/black"
            android:textSize="@dimen/_26ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_menu_pve"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_action_button"
        android:orientation="vertical"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_menu_pvp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_125sdp"
            android:layout_gravity="center"

            android:src="@drawable/ic_pvc" />

        <TextView
            android:id="@+id/tv_menu_pve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/font_road_rage"
            android:text="@string/text_pve"
            android:textColor="@color/black"
            android:textSize="@dimen/_26ssp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_menu_lets_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/text_button_lets_play"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_menu_pve" />


</androidx.constraintlayout.widget.ConstraintLayout>